# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ALLAUX = [
    "SRC/ilaenv.f",
    "SRC/ilaenv2stage.f",
    "SRC/ieeeck.f",
    "SRC/lsamen.f",
    "SRC/iparmq.f",
    "SRC/iparam2stage.F",
    "SRC/ilaprec.f",
    "SRC/ilatrans.f",
    "SRC/ilauplo.f",
    "SRC/iladiag.f",
    "SRC/chla_transtype.f",
    "INSTALL/ilaver.f",
    "INSTALL/lsame.f",
    "SRC/xerbla.f",
    "SRC/xerbla_array.f",
    "INSTALL/slamch.f",
]

SCLAUX = [
    "SRC/sbdsdc.f",
    "SRC/sbdsqr.f",
    "SRC/sdisna.f",
    "SRC/slabad.f",
    "SRC/slacpy.f",
    "SRC/sladiv.f",
    "SRC/slae2.f",
    "SRC/slaebz.f",
    "SRC/slaed0.f",
    "SRC/slaed1.f",
    "SRC/slaed2.f",
    "SRC/slaed3.f",
    "SRC/slaed4.f",
    "SRC/slaed5.f",
    "SRC/slaed6.f",
    "SRC/slaed7.f",
    "SRC/slaed8.f",
    "SRC/slaed9.f",
    "SRC/slaeda.f",
    "SRC/slaev2.f",
    "SRC/slagtf.f",
    "SRC/slagts.f",
    "SRC/slamrg.f",
    "SRC/slanst.f",
    "SRC/slapy2.f",
    "SRC/slapy3.f",
    "SRC/slarnv.f",
    "SRC/slarra.f",
    "SRC/slarrb.f",
    "SRC/slarrc.f",
    "SRC/slarrd.f",
    "SRC/slarre.f",
    "SRC/slarrf.f",
    "SRC/slarrj.f",
    "SRC/slarrk.f",
    "SRC/slarrr.f",
    "SRC/slaneg.f",
    "SRC/slartg.f",
    "SRC/slaruv.f",
    "SRC/slas2.f",
    "SRC/slascl.f",
    "SRC/slasd0.f",
    "SRC/slasd1.f",
    "SRC/slasd2.f",
    "SRC/slasd3.f",
    "SRC/slasd4.f",
    "SRC/slasd5.f",
    "SRC/slasd6.f",
    "SRC/slasd7.f",
    "SRC/slasd8.f",
    "SRC/slasda.f",
    "SRC/slasdq.f",
    "SRC/slasdt.f",
    "SRC/slaset.f",
    "SRC/slasq1.f",
    "SRC/slasq2.f",
    "SRC/slasq3.f",
    "SRC/slasq4.f",
    "SRC/slasq5.f",
    "SRC/slasq6.f",
    "SRC/slasr.f",
    "SRC/slasrt.f",
    "SRC/slassq.f",
    "SRC/slasv2.f",
    "SRC/spttrf.f",
    "SRC/sstebz.f",
    "SRC/sstedc.f",
    "SRC/ssteqr.f",
    "SRC/ssterf.f",
    "SRC/slaisnan.f",
    "SRC/sisnan.f",
    "SRC/slartgp.f",
    "SRC/slartgs.f",
]

DZLAUX = [
    "SRC/dbdsdc.f",
    "SRC/dbdsqr.f",
    "SRC/ddisna.f",
    "SRC/dlabad.f",
    "SRC/dlacpy.f",
    "SRC/dladiv.f",
    "SRC/dlae2.f",
    "SRC/dlaebz.f",
    "SRC/dlaed0.f",
    "SRC/dlaed1.f",
    "SRC/dlaed2.f",
    "SRC/dlaed3.f",
    "SRC/dlaed4.f",
    "SRC/dlaed5.f",
    "SRC/dlaed6.f",
    "SRC/dlaed7.f",
    "SRC/dlaed8.f",
    "SRC/dlaed9.f",
    "SRC/dlaeda.f",
    "SRC/dlaev2.f",
    "SRC/dlagtf.f",
    "SRC/dlagts.f",
    "SRC/dlamrg.f",
    "SRC/dlanst.f",
    "SRC/dlapy2.f",
    "SRC/dlapy3.f",
    "SRC/dlarnv.f",
    "SRC/dlarra.f",
    "SRC/dlarrb.f",
    "SRC/dlarrc.f",
    "SRC/dlarrd.f",
    "SRC/dlarre.f",
    "SRC/dlarrf.f",
    "SRC/dlarrj.f",
    "SRC/dlarrk.f",
    "SRC/dlarrr.f",
    "SRC/dlaneg.f",
    "SRC/dlartg.f",
    "SRC/dlaruv.f",
    "SRC/dlas2.f",
    "SRC/dlascl.f",
    "SRC/dlasd0.f",
    "SRC/dlasd1.f",
    "SRC/dlasd2.f",
    "SRC/dlasd3.f",
    "SRC/dlasd4.f",
    "SRC/dlasd5.f",
    "SRC/dlasd6.f",
    "SRC/dlasd7.f",
    "SRC/dlasd8.f",
    "SRC/dlasda.f",
    "SRC/dlasdq.f",
    "SRC/dlasdt.f",
    "SRC/dlaset.f",
    "SRC/dlasq1.f",
    "SRC/dlasq2.f",
    "SRC/dlasq3.f",
    "SRC/dlasq4.f",
    "SRC/dlasq5.f",
    "SRC/dlasq6.f",
    "SRC/dlasr.f",
    "SRC/dlasrt.f",
    "SRC/dlassq.f",
    "SRC/dlasv2.f",
    "SRC/dpttrf.f",
    "SRC/dstebz.f",
    "SRC/dstedc.f",
    "SRC/dsteqr.f",
    "SRC/dsterf.f",
    "SRC/dlaisnan.f",
    "SRC/disnan.f",
    "SRC/dlartgp.f",
    "SRC/dlartgs.f",
    "INSTALL/dlamch.f",
]

SLASRC = [
    "SRC/sbdsvdx.f",
    "SRC/sgbbrd.f",
    "SRC/sgbcon.f",
    "SRC/sgbequ.f",
    "SRC/sgbrfs.f",
    "SRC/sgbsv.f",
    "SRC/sgbsvx.f",
    "SRC/sgbtf2.f",
    "SRC/sgbtrf.f",
    "SRC/sgbtrs.f",
    "SRC/sgebak.f",
    "SRC/sgebal.f",
    "SRC/sgebd2.f",
    "SRC/sgebrd.f",
    "SRC/sgecon.f",
    "SRC/sgeequ.f",
    "SRC/sgees.f",
    "SRC/sgeesx.f",
    "SRC/sgeev.f",
    "SRC/sgeevx.f",
    "SRC/sgehd2.f",
    "SRC/sgehrd.f",
    "SRC/sgelq2.f",
    "SRC/sgelqf.f",
    "SRC/sgels.f",
    "SRC/sgelsd.f",
    "SRC/sgelss.f",
    "SRC/sgelsy.f",
    "SRC/sgeql2.f",
    "SRC/sgeqlf.f",
    "SRC/sgeqp3.f",
    "SRC/sgeqr2.f",
    "SRC/sgeqr2p.f",
    "SRC/sgeqrf.f",
    "SRC/sgeqrfp.f",
    "SRC/sgerfs.f",
    "SRC/sgerq2.f",
    "SRC/sgerqf.f",
    "SRC/sgesc2.f",
    "SRC/sgesdd.f",
    "SRC/sgesv.f",
    "SRC/sgesvd.f",
    "SRC/sgesvdx.f",
    "SRC/sgesvx.f",
    "SRC/sgetc2.f",
    "SRC/sgetf2.f",
    "SRC/sgetrf2.f",
    "SRC/sgetri.f",
    "SRC/sggbak.f",
    "SRC/sggbal.f",
    "SRC/sgges.f",
    "SRC/sgges3.f",
    "SRC/sggesx.f",
    "SRC/sggev.f",
    "SRC/sggev3.f",
    "SRC/sggevx.f",
    "SRC/sggglm.f",
    "SRC/sgghrd.f",
    "SRC/sgghd3.f",
    "SRC/sgglse.f",
    "SRC/sggqrf.f",
    "SRC/sggrqf.f",
    "SRC/sggsvd3.f",
    "SRC/sggsvp3.f",
    "SRC/sgtcon.f",
    "SRC/sgtrfs.f",
    "SRC/sgtsv.f",
    "SRC/sgtsvx.f",
    "SRC/sgttrf.f",
    "SRC/sgttrs.f",
    "SRC/sgtts2.f",
    "SRC/shgeqz.f",
    "SRC/shsein.f",
    "SRC/shseqr.f",
    "SRC/slabrd.f",
    "SRC/slacon.f",
    "SRC/slacn2.f",
    "SRC/slaein.f",
    "SRC/slaexc.f",
    "SRC/slag2.f",
    "SRC/slags2.f",
    "SRC/slagtm.f",
    "SRC/slagv2.f",
    "SRC/slahqr.f",
    "SRC/slahr2.f",
    "SRC/slaic1.f",
    "SRC/slaln2.f",
    "SRC/slals0.f",
    "SRC/slalsa.f",
    "SRC/slalsd.f",
    "SRC/slangb.f",
    "SRC/slange.f",
    "SRC/slangt.f",
    "SRC/slanhs.f",
    "SRC/slansb.f",
    "SRC/slansp.f",
    "SRC/slansy.f",
    "SRC/slantb.f",
    "SRC/slantp.f",
    "SRC/slantr.f",
    "SRC/slanv2.f",
    "SRC/slapll.f",
    "SRC/slapmt.f",
    "SRC/slaqgb.f",
    "SRC/slaqge.f",
    "SRC/slaqp2.f",
    "SRC/slaqps.f",
    "SRC/slaqsb.f",
    "SRC/slaqsp.f",
    "SRC/slaqsy.f",
    "SRC/slaqr0.f",
    "SRC/slaqr1.f",
    "SRC/slaqr2.f",
    "SRC/slaqr3.f",
    "SRC/slaqr4.f",
    "SRC/slaqr5.f",
    "SRC/slaqtr.f",
    "SRC/slar1v.f",
    "SRC/slar2v.f",
    "SRC/ilaslr.f",
    "SRC/ilaslc.f",
    "SRC/slarf.f",
    "SRC/slarfb.f",
    "SRC/slarfg.f",
    "SRC/slarfgp.f",
    "SRC/slarft.f",
    "SRC/slarfx.f",
    "SRC/slarfy.f",
    "SRC/slargv.f",
    "SRC/slarrv.f",
    "SRC/slartv.f",
    "SRC/slarz.f",
    "SRC/slarzb.f",
    "SRC/slarzt.f",
    "SRC/slaswp.f",
    "SRC/slasy2.f",
    "SRC/slasyf.f",
    "SRC/slasyf_rook.f",
    "SRC/slasyf_rk.f",
    "SRC/slasyf_aa.f",
    "SRC/slatbs.f",
    "SRC/slatdf.f",
    "SRC/slatps.f",
    "SRC/slatrd.f",
    "SRC/slatrs.f",
    "SRC/slatrz.f",
    "SRC/slauu2.f",
    "SRC/slauum.f",
    "SRC/sopgtr.f",
    "SRC/sopmtr.f",
    "SRC/sorg2l.f",
    "SRC/sorg2r.f",
    "SRC/sorgbr.f",
    "SRC/sorghr.f",
    "SRC/sorgl2.f",
    "SRC/sorglq.f",
    "SRC/sorgql.f",
    "SRC/sorgqr.f",
    "SRC/sorgr2.f",
    "SRC/sorgrq.f",
    "SRC/sorgtr.f",
    "SRC/sorgtsqr.f",
    "SRC/sorm2l.f",
    "SRC/sorm2r.f",
    "SRC/sorm22.f",
    "SRC/sormbr.f",
    "SRC/sormhr.f",
    "SRC/sorml2.f",
    "SRC/sormlq.f",
    "SRC/sormql.f",
    "SRC/sormqr.f",
    "SRC/sormr2.f",
    "SRC/sormr3.f",
    "SRC/sormrq.f",
    "SRC/sormrz.f",
    "SRC/sormtr.f",
    "SRC/spbcon.f",
    "SRC/spbequ.f",
    "SRC/spbrfs.f",
    "SRC/spbstf.f",
    "SRC/spbsv.f",
    "SRC/spbsvx.f",
    "SRC/spbtf2.f",
    "SRC/spbtrf.f",
    "SRC/spbtrs.f",
    "SRC/spocon.f",
    "SRC/spoequ.f",
    "SRC/sporfs.f",
    "SRC/sposv.f",
    "SRC/sposvx.f",
    "SRC/spotf2.f",
    "SRC/spotrf2.f",
    "SRC/spotri.f",
    "SRC/spstrf.f",
    "SRC/spstf2.f",
    "SRC/sppcon.f",
    "SRC/sppequ.f",
    "SRC/spprfs.f",
    "SRC/sppsv.f",
    "SRC/sppsvx.f",
    "SRC/spptrf.f",
    "SRC/spptri.f",
    "SRC/spptrs.f",
    "SRC/sptcon.f",
    "SRC/spteqr.f",
    "SRC/sptrfs.f",
    "SRC/sptsv.f",
    "SRC/sptsvx.f",
    "SRC/spttrs.f",
    "SRC/sptts2.f",
    "SRC/srscl.f",
    "SRC/ssbev.f",
    "SRC/ssbevd.f",
    "SRC/ssbevx.f",
    "SRC/ssbgst.f",
    "SRC/ssbgv.f",
    "SRC/ssbgvd.f",
    "SRC/ssbgvx.f",
    "SRC/ssbtrd.f",
    "SRC/sspcon.f",
    "SRC/sspev.f",
    "SRC/sspevd.f",
    "SRC/sspevx.f",
    "SRC/sspgst.f",
    "SRC/sspgv.f",
    "SRC/sspgvd.f",
    "SRC/sspgvx.f",
    "SRC/ssprfs.f",
    "SRC/sspsv.f",
    "SRC/sspsvx.f",
    "SRC/ssptrd.f",
    "SRC/ssptrf.f",
    "SRC/ssptri.f",
    "SRC/ssptrs.f",
    "SRC/sstegr.f",
    "SRC/sstein.f",
    "SRC/sstev.f",
    "SRC/sstevd.f",
    "SRC/sstevr.f",
    "SRC/sstevx.f",
    "SRC/ssycon.f",
    "SRC/ssyev.f",
    "SRC/ssyevd.f",
    "SRC/ssyevr.f",
    "SRC/ssyevx.f",
    "SRC/ssygs2.f",
    "SRC/ssygst.f",
    "SRC/ssygv.f",
    "SRC/ssygvd.f",
    "SRC/ssygvx.f",
    "SRC/ssyrfs.f",
    "SRC/ssysv.f",
    "SRC/ssysvx.f",
    "SRC/ssytd2.f",
    "SRC/ssytf2.f",
    "SRC/ssytrd.f",
    "SRC/ssytrf.f",
    "SRC/ssytri.f",
    "SRC/ssytri2.f",
    "SRC/ssytri2x.f",
    "SRC/ssyswapr.f",
    "SRC/ssytrs.f",
    "SRC/ssytrs2.f",
    "SRC/ssyconv.f",
    "SRC/ssyconvf.f",
    "SRC/ssyconvf_rook.f",
    "SRC/ssytf2_rook.f",
    "SRC/ssytrf_rook.f",
    "SRC/ssytrs_rook.f",
    "SRC/ssytri_rook.f",
    "SRC/ssycon_rook.f",
    "SRC/ssysv_rook.f",
    "SRC/ssytf2_rk.f",
    "SRC/ssytrf_rk.f",
    "SRC/ssytrs_3.f",
    "SRC/ssytri_3.f",
    "SRC/ssytri_3x.f",
    "SRC/ssycon_3.f",
    "SRC/ssysv_rk.f",
    "SRC/ssysv_aa.f",
    "SRC/ssytrf_aa.f",
    "SRC/ssytrs_aa.f",
    "SRC/ssysv_aa_2stage.f",
    "SRC/ssytrf_aa_2stage.f",
    "SRC/ssytrs_aa_2stage.f",
    "SRC/stbcon.f",
    "SRC/stbrfs.f",
    "SRC/stbtrs.f",
    "SRC/stgevc.f",
    "SRC/stgex2.f",
    "SRC/stgexc.f",
    "SRC/stgsen.f",
    "SRC/stgsja.f",
    "SRC/stgsna.f",
    "SRC/stgsy2.f",
    "SRC/stgsyl.f",
    "SRC/stpcon.f",
    "SRC/stprfs.f",
    "SRC/stptri.f",
    "SRC/stptrs.f",
    "SRC/strcon.f",
    "SRC/strevc.f",
    "SRC/strevc3.f",
    "SRC/strexc.f",
    "SRC/strrfs.f",
    "SRC/strsen.f",
    "SRC/strsna.f",
    "SRC/strsyl.f",
    "SRC/strti2.f",
    "SRC/strtri.f",
    "SRC/strtrs.f",
    "SRC/stzrzf.f",
    "SRC/sstemr.f",
    "SRC/slansf.f",
    "SRC/spftrf.f",
    "SRC/spftri.f",
    "SRC/spftrs.f",
    "SRC/ssfrk.f",
    "SRC/stfsm.f",
    "SRC/stftri.f",
    "SRC/stfttp.f",
    "SRC/stfttr.f",
    "SRC/stpttf.f",
    "SRC/stpttr.f",
    "SRC/strttf.f",
    "SRC/strttp.f",
    "SRC/sgejsv.f",
    "SRC/sgesvj.f",
    "SRC/sgsvj0.f",
    "SRC/sgsvj1.f",
    "SRC/sgeequb.f",
    "SRC/ssyequb.f",
    "SRC/spoequb.f",
    "SRC/sgbequb.f",
    "SRC/sbbcsd.f",
    "SRC/slapmr.f",
    "SRC/sorbdb.f",
    "SRC/sorbdb1.f",
    "SRC/sorbdb2.f",
    "SRC/sorbdb3.f",
    "SRC/sorbdb4.f",
    "SRC/sorbdb5.f",
    "SRC/sorbdb6.f",
    "SRC/sorcsd.f",
    "SRC/sorcsd2by1.f",
    "SRC/sgeqrt.f",
    "SRC/sgeqrt2.f",
    "SRC/sgeqrt3.f",
    "SRC/sgemqrt.f",
    "SRC/stpqrt.f",
    "SRC/stpqrt2.f",
    "SRC/stpmqrt.f",
    "SRC/stprfb.f",
    "SRC/sgelqt.f",
    "SRC/sgelqt3.f",
    "SRC/sgemlqt.f",
    "SRC/sgetsls.f",
    "SRC/sgeqr.f",
    "SRC/slatsqr.f",
    "SRC/slamtsqr.f",
    "SRC/sgemqr.f",
    "SRC/sgelq.f",
    "SRC/slaswlq.f",
    "SRC/slamswlq.f",
    "SRC/sgemlq.f",
    "SRC/stplqt.f",
    "SRC/stplqt2.f",
    "SRC/stpmlqt.f",
    "SRC/sorhr_col.f",
    "SRC/slaorhr_col_getrfnp.f",
    "SRC/slaorhr_col_getrfnp2.f",
    "SRC/ssytrd_2stage.f",
    "SRC/ssytrd_sy2sb.f",
    "SRC/ssytrd_sb2st.F",
    "SRC/ssb2st_kernels.f",
    "SRC/ssyevd_2stage.f",
    "SRC/ssyev_2stage.f",
    "SRC/ssyevx_2stage.f",
    "SRC/ssyevr_2stage.f",
    "SRC/ssbev_2stage.f",
    "SRC/ssbevx_2stage.f",
    "SRC/ssbevd_2stage.f",
    "SRC/ssygv_2stage.f",
    "SRC/sgesvdq.f",
    "SRC/scombssq.f",
]

DSLASRC = [
    "SRC/spotrs.f",
    "SRC/sgetrs.f",
    "SRC/spotrf.f",
    "SRC/sgetrf.f",
]

SXLASRC = [
    "SRC/sgesvxx.f",
    "SRC/sgerfsx.f",
    "SRC/sla_gerfsx_extended.f",
    "SRC/sla_geamv.f",
    "SRC/sla_gercond.f",
    "SRC/sla_gerpvgrw.f",
    "SRC/ssysvxx.f",
    "SRC/ssyrfsx.f",
    "SRC/sla_syrfsx_extended.f",
    "SRC/sla_syamv.f",
    "SRC/sla_syrcond.f",
    "SRC/sla_syrpvgrw.f",
    "SRC/sposvxx.f",
    "SRC/sporfsx.f",
    "SRC/sla_porfsx_extended.f",
    "SRC/sla_porcond.f",
    "SRC/sla_porpvgrw.f",
    "SRC/sgbsvxx.f",
    "SRC/sgbrfsx.f",
    "SRC/sla_gbrfsx_extended.f",
    "SRC/sla_gbamv.f",
    "SRC/sla_gbrcond.f",
    "SRC/sla_gbrpvgrw.f",
    "SRC/sla_lin_berr.f",
    "SRC/slarscl2.f",
    "SRC/slascl2.f",
    "SRC/sla_wwaddw.f",
]

CLASRC = [
    "SRC/cbdsqr.f",
    "SRC/cgbbrd.f",
    "SRC/cgbcon.f",
    "SRC/cgbequ.f",
    "SRC/cgbrfs.f",
    "SRC/cgbsv.f",
    "SRC/cgbsvx.f",
    "SRC/cgbtf2.f",
    "SRC/cgbtrf.f",
    "SRC/cgbtrs.f",
    "SRC/cgebak.f",
    "SRC/cgebal.f",
    "SRC/cgebd2.f",
    "SRC/cgebrd.f",
    "SRC/cgecon.f",
    "SRC/cgeequ.f",
    "SRC/cgees.f",
    "SRC/cgeesx.f",
    "SRC/cgeev.f",
    "SRC/cgeevx.f",
    "SRC/cgehd2.f",
    "SRC/cgehrd.f",
    "SRC/cgelq2.f",
    "SRC/cgelqf.f",
    "SRC/cgels.f",
    "SRC/cgelsd.f",
    "SRC/cgelss.f",
    "SRC/cgelsy.f",
    "SRC/cgeql2.f",
    "SRC/cgeqlf.f",
    "SRC/cgeqp3.f",
    "SRC/cgeqr2.f",
    "SRC/cgeqr2p.f",
    "SRC/cgeqrf.f",
    "SRC/cgeqrfp.f",
    "SRC/cgerfs.f",
    "SRC/cgerq2.f",
    "SRC/cgerqf.f",
    "SRC/cgesc2.f",
    "SRC/cgesdd.f",
    "SRC/cgesv.f",
    "SRC/cgesvd.f",
    "SRC/cgesvdx.f",
    "SRC/cgesvj.f",
    "SRC/cgejsv.f",
    "SRC/cgsvj0.f",
    "SRC/cgsvj1.f",
    "SRC/cgesvx.f",
    "SRC/cgetc2.f",
    "SRC/cgetf2.f",
    "SRC/cgetrf2.f",
    "SRC/cgetri.f",
    "SRC/cggbak.f",
    "SRC/cggbal.f",
    "SRC/cgges.f",
    "SRC/cgges3.f",
    "SRC/cggesx.f",
    "SRC/cggev.f",
    "SRC/cggev3.f",
    "SRC/cggevx.f",
    "SRC/cggglm.f",
    "SRC/cgghrd.f",
    "SRC/cgghd3.f",
    "SRC/cgglse.f",
    "SRC/cggqrf.f",
    "SRC/cggrqf.f",
    "SRC/cggsvd3.f",
    "SRC/cggsvp3.f",
    "SRC/cgtcon.f",
    "SRC/cgtrfs.f",
    "SRC/cgtsv.f",
    "SRC/cgtsvx.f",
    "SRC/cgttrf.f",
    "SRC/cgttrs.f",
    "SRC/cgtts2.f",
    "SRC/chbev.f",
    "SRC/chbevd.f",
    "SRC/chbevx.f",
    "SRC/chbgst.f",
    "SRC/chbgv.f",
    "SRC/chbgvd.f",
    "SRC/chbgvx.f",
    "SRC/chbtrd.f",
    "SRC/checon.f",
    "SRC/cheev.f",
    "SRC/cheevd.f",
    "SRC/cheevr.f",
    "SRC/cheevx.f",
    "SRC/chegs2.f",
    "SRC/chegst.f",
    "SRC/chegv.f",
    "SRC/chegvd.f",
    "SRC/chegvx.f",
    "SRC/cherfs.f",
    "SRC/chesv.f",
    "SRC/chesvx.f",
    "SRC/chetd2.f",
    "SRC/chetf2.f",
    "SRC/chetrd.f",
    "SRC/chetrf.f",
    "SRC/chetri.f",
    "SRC/chetri2.f",
    "SRC/chetri2x.f",
    "SRC/cheswapr.f",
    "SRC/chetrs.f",
    "SRC/chetrs2.f",
    "SRC/chetf2_rook.f",
    "SRC/chetrf_rook.f",
    "SRC/chetri_rook.f",
    "SRC/chetrs_rook.f",
    "SRC/checon_rook.f",
    "SRC/chesv_rook.f",
    "SRC/chetf2_rk.f",
    "SRC/chetrf_rk.f",
    "SRC/chetri_3.f",
    "SRC/chetri_3x.f",
    "SRC/chetrs_3.f",
    "SRC/checon_3.f",
    "SRC/chesv_rk.f",
    "SRC/chesv_aa.f",
    "SRC/chetrf_aa.f",
    "SRC/chetrs_aa.f",
    "SRC/chesv_aa_2stage.f",
    "SRC/chetrf_aa_2stage.f",
    "SRC/chetrs_aa_2stage.f",
    "SRC/chgeqz.f",
    "SRC/chpcon.f",
    "SRC/chpev.f",
    "SRC/chpevd.f",
    "SRC/chpevx.f",
    "SRC/chpgst.f",
    "SRC/chpgv.f",
    "SRC/chpgvd.f",
    "SRC/chpgvx.f",
    "SRC/chprfs.f",
    "SRC/chpsv.f",
    "SRC/chpsvx.f",
    "SRC/chptrd.f",
    "SRC/chptrf.f",
    "SRC/chptri.f",
    "SRC/chptrs.f",
    "SRC/chsein.f",
    "SRC/chseqr.f",
    "SRC/clabrd.f",
    "SRC/clacgv.f",
    "SRC/clacon.f",
    "SRC/clacn2.f",
    "SRC/clacp2.f",
    "SRC/clacpy.f",
    "SRC/clacrm.f",
    "SRC/clacrt.f",
    "SRC/cladiv.f",
    "SRC/claed0.f",
    "SRC/claed7.f",
    "SRC/claed8.f",
    "SRC/claein.f",
    "SRC/claesy.f",
    "SRC/claev2.f",
    "SRC/clags2.f",
    "SRC/clagtm.f",
    "SRC/clahef.f",
    "SRC/clahef_rook.f",
    "SRC/clahef_rk.f",
    "SRC/clahef_aa.f",
    "SRC/clahqr.f",
    "SRC/clahr2.f",
    "SRC/claic1.f",
    "SRC/clals0.f",
    "SRC/clalsa.f",
    "SRC/clalsd.f",
    "SRC/clangb.f",
    "SRC/clange.f",
    "SRC/clangt.f",
    "SRC/clanhb.f",
    "SRC/clanhe.f",
    "SRC/clanhp.f",
    "SRC/clanhs.f",
    "SRC/clanht.f",
    "SRC/clansb.f",
    "SRC/clansp.f",
    "SRC/clansy.f",
    "SRC/clantb.f",
    "SRC/clantp.f",
    "SRC/clantr.f",
    "SRC/clapll.f",
    "SRC/clapmt.f",
    "SRC/clarcm.f",
    "SRC/claqgb.f",
    "SRC/claqge.f",
    "SRC/claqhb.f",
    "SRC/claqhe.f",
    "SRC/claqhp.f",
    "SRC/claqp2.f",
    "SRC/claqps.f",
    "SRC/claqsb.f",
    "SRC/claqr0.f",
    "SRC/claqr1.f",
    "SRC/claqr2.f",
    "SRC/claqr3.f",
    "SRC/claqr4.f",
    "SRC/claqr5.f",
    "SRC/claqsp.f",
    "SRC/claqsy.f",
    "SRC/clar1v.f",
    "SRC/clar2v.f",
    "SRC/ilaclr.f",
    "SRC/ilaclc.f",
    "SRC/clarf.f",
    "SRC/clarfb.f",
    "SRC/clarfg.f",
    "SRC/clarfgp.f",
    "SRC/clarft.f",
    "SRC/clarfx.f",
    "SRC/clarfy.f",
    "SRC/clargv.f",
    "SRC/clarnv.f",
    "SRC/clarrv.f",
    "SRC/clartg.f",
    "SRC/clartv.f",
    "SRC/clarz.f",
    "SRC/clarzb.f",
    "SRC/clarzt.f",
    "SRC/clascl.f",
    "SRC/claset.f",
    "SRC/clasr.f",
    "SRC/classq.f",
    "SRC/claswp.f",
    "SRC/clasyf.f",
    "SRC/clasyf_rook.f",
    "SRC/clasyf_rk.f",
    "SRC/clasyf_aa.f",
    "SRC/clatbs.f",
    "SRC/clatdf.f",
    "SRC/clatps.f",
    "SRC/clatrd.f",
    "SRC/clatrs.f",
    "SRC/clatrz.f",
    "SRC/clauu2.f",
    "SRC/clauum.f",
    "SRC/cpbcon.f",
    "SRC/cpbequ.f",
    "SRC/cpbrfs.f",
    "SRC/cpbstf.f",
    "SRC/cpbsv.f",
    "SRC/cpbsvx.f",
    "SRC/cpbtf2.f",
    "SRC/cpbtrf.f",
    "SRC/cpbtrs.f",
    "SRC/cpocon.f",
    "SRC/cpoequ.f",
    "SRC/cporfs.f",
    "SRC/cposv.f",
    "SRC/cposvx.f",
    "SRC/cpotf2.f",
    "SRC/cpotrf2.f",
    "SRC/cpotri.f",
    "SRC/cpstrf.f",
    "SRC/cpstf2.f",
    "SRC/cppcon.f",
    "SRC/cppequ.f",
    "SRC/cpprfs.f",
    "SRC/cppsv.f",
    "SRC/cppsvx.f",
    "SRC/cpptrf.f",
    "SRC/cpptri.f",
    "SRC/cpptrs.f",
    "SRC/cptcon.f",
    "SRC/cpteqr.f",
    "SRC/cptrfs.f",
    "SRC/cptsv.f",
    "SRC/cptsvx.f",
    "SRC/cpttrf.f",
    "SRC/cpttrs.f",
    "SRC/cptts2.f",
    "SRC/crot.f",
    "SRC/cspcon.f",
    "SRC/cspmv.f",
    "SRC/cspr.f",
    "SRC/csprfs.f",
    "SRC/cspsv.f",
    "SRC/cspsvx.f",
    "SRC/csptrf.f",
    "SRC/csptri.f",
    "SRC/csptrs.f",
    "SRC/csrscl.f",
    "SRC/cstedc.f",
    "SRC/cstegr.f",
    "SRC/cstein.f",
    "SRC/csteqr.f",
    "SRC/csycon.f",
    "SRC/csymv.f",
    "SRC/csyr.f",
    "SRC/csyrfs.f",
    "SRC/csysv.f",
    "SRC/csysvx.f",
    "SRC/csytf2.f",
    "SRC/csytrf.f",
    "SRC/csytri.f",
    "SRC/csytri2.f",
    "SRC/csytri2x.f",
    "SRC/csyswapr.f",
    "SRC/csytrs.f",
    "SRC/csytrs2.f",
    "SRC/csyconv.f",
    "SRC/csyconvf.f",
    "SRC/csyconvf_rook.f",
    "SRC/csytf2_rook.f",
    "SRC/csytrf_rook.f",
    "SRC/csytrs_rook.f",
    "SRC/csytri_rook.f",
    "SRC/csycon_rook.f",
    "SRC/csysv_rook.f",
    "SRC/csytf2_rk.f",
    "SRC/csytrf_rk.f",
    "SRC/csytrf_aa.f",
    "SRC/csytrs_3.f",
    "SRC/csytrs_aa.f",
    "SRC/csytri_3.f",
    "SRC/csytri_3x.f",
    "SRC/csycon_3.f",
    "SRC/csysv_rk.f",
    "SRC/csysv_aa.f",
    "SRC/csysv_aa_2stage.f",
    "SRC/csytrf_aa_2stage.f",
    "SRC/csytrs_aa_2stage.f",
    "SRC/ctbcon.f",
    "SRC/ctbrfs.f",
    "SRC/ctbtrs.f",
    "SRC/ctgevc.f",
    "SRC/ctgex2.f",
    "SRC/ctgexc.f",
    "SRC/ctgsen.f",
    "SRC/ctgsja.f",
    "SRC/ctgsna.f",
    "SRC/ctgsy2.f",
    "SRC/ctgsyl.f",
    "SRC/ctpcon.f",
    "SRC/ctprfs.f",
    "SRC/ctptri.f",
    "SRC/ctptrs.f",
    "SRC/ctrcon.f",
    "SRC/ctrevc.f",
    "SRC/ctrevc3.f",
    "SRC/ctrexc.f",
    "SRC/ctrrfs.f",
    "SRC/ctrsen.f",
    "SRC/ctrsna.f",
    "SRC/ctrsyl.f",
    "SRC/ctrti2.f",
    "SRC/ctrtri.f",
    "SRC/ctrtrs.f",
    "SRC/ctzrzf.f",
    "SRC/cung2l.f",
    "SRC/cung2r.f",
    "SRC/cungbr.f",
    "SRC/cunghr.f",
    "SRC/cungl2.f",
    "SRC/cunglq.f",
    "SRC/cungql.f",
    "SRC/cungqr.f",
    "SRC/cungr2.f",
    "SRC/cungrq.f",
    "SRC/cungtr.f",
    "SRC/cungtsqr.f",
    "SRC/cunm2l.f",
    "SRC/cunm2r.f",
    "SRC/cunmbr.f",
    "SRC/cunmhr.f",
    "SRC/cunml2.f",
    "SRC/cunm22.f",
    "SRC/cunmlq.f",
    "SRC/cunmql.f",
    "SRC/cunmqr.f",
    "SRC/cunmr2.f",
    "SRC/cunmr3.f",
    "SRC/cunmrq.f",
    "SRC/cunmrz.f",
    "SRC/cunmtr.f",
    "SRC/cupgtr.f",
    "SRC/cupmtr.f",
    "SRC/icmax1.f",
    "SRC/scsum1.f",
    "SRC/cstemr.f",
    "SRC/chfrk.f",
    "SRC/ctfttp.f",
    "SRC/clanhf.f",
    "SRC/cpftrf.f",
    "SRC/cpftri.f",
    "SRC/cpftrs.f",
    "SRC/ctfsm.f",
    "SRC/ctftri.f",
    "SRC/ctfttr.f",
    "SRC/ctpttf.f",
    "SRC/ctpttr.f",
    "SRC/ctrttf.f",
    "SRC/ctrttp.f",
    "SRC/cgeequb.f",
    "SRC/cgbequb.f",
    "SRC/csyequb.f",
    "SRC/cpoequb.f",
    "SRC/cheequb.f",
    "SRC/cbbcsd.f",
    "SRC/clapmr.f",
    "SRC/cunbdb.f",
    "SRC/cunbdb1.f",
    "SRC/cunbdb2.f",
    "SRC/cunbdb3.f",
    "SRC/cunbdb4.f",
    "SRC/cunbdb5.f",
    "SRC/cunbdb6.f",
    "SRC/cuncsd.f",
    "SRC/cuncsd2by1.f",
    "SRC/cgeqrt.f",
    "SRC/cgeqrt2.f",
    "SRC/cgeqrt3.f",
    "SRC/cgemqrt.f",
    "SRC/ctpqrt.f",
    "SRC/ctpqrt2.f",
    "SRC/ctpmqrt.f",
    "SRC/ctprfb.f",
    "SRC/cgelqt.f",
    "SRC/cgelqt3.f",
    "SRC/cgemlqt.f",
    "SRC/cgetsls.f",
    "SRC/cgeqr.f",
    "SRC/clatsqr.f",
    "SRC/clamtsqr.f",
    "SRC/cgemqr.f",
    "SRC/cgelq.f",
    "SRC/claswlq.f",
    "SRC/clamswlq.f",
    "SRC/cgemlq.f",
    "SRC/ctplqt.f",
    "SRC/ctplqt2.f",
    "SRC/ctpmlqt.f",
    "SRC/cunhr_col.f",
    "SRC/claunhr_col_getrfnp.f",
    "SRC/claunhr_col_getrfnp2.f",
    "SRC/chetrd_2stage.f",
    "SRC/chetrd_he2hb.f",
    "SRC/chetrd_hb2st.F",
    "SRC/chb2st_kernels.f",
    "SRC/cheevd_2stage.f",
    "SRC/cheev_2stage.f",
    "SRC/cheevx_2stage.f",
    "SRC/cheevr_2stage.f",
    "SRC/chbev_2stage.f",
    "SRC/chbevx_2stage.f",
    "SRC/chbevd_2stage.f",
    "SRC/chegv_2stage.f",
    "SRC/cgesvdq.f",
]

CXLASRC = [
    "SRC/cgesvxx.f",
    "SRC/cgerfsx.f",
    "SRC/cla_gerfsx_extended.f",
    "SRC/cla_geamv.f",
    "SRC/cla_gercond_c.f",
    "SRC/cla_gercond_x.f",
    "SRC/cla_gerpvgrw.f",
    "SRC/csysvxx.f",
    "SRC/csyrfsx.f",
    "SRC/cla_syrfsx_extended.f",
    "SRC/cla_syamv.f",
    "SRC/cla_syrcond_c.f",
    "SRC/cla_syrcond_x.f",
    "SRC/cla_syrpvgrw.f",
    "SRC/cposvxx.f",
    "SRC/cporfsx.f",
    "SRC/cla_porfsx_extended.f",
    "SRC/cla_porcond_c.f",
    "SRC/cla_porcond_x.f",
    "SRC/cla_porpvgrw.f",
    "SRC/cgbsvxx.f",
    "SRC/cgbrfsx.f",
    "SRC/cla_gbrfsx_extended.f",
    "SRC/cla_gbamv.f",
    "SRC/cla_gbrcond_c.f",
    "SRC/cla_gbrcond_x.f",
    "SRC/cla_gbrpvgrw.f",
    "SRC/chesvxx.f",
    "SRC/cherfsx.f",
    "SRC/cla_herfsx_extended.f",
    "SRC/cla_heamv.f",
    "SRC/cla_hercond_c.f",
    "SRC/cla_hercond_x.f",
    "SRC/cla_herpvgrw.f",
    "SRC/cla_lin_berr.f",
    "SRC/clarscl2.f",
    "SRC/clascl2.f",
    "SRC/cla_wwaddw.f",
]

ZCLASRC = [
    "SRC/cpotrs.f",
    "SRC/cgetrs.f",
    "SRC/cpotrf.f",
    "SRC/cgetrf.f",
]

DLASRC = [
    "SRC/dbdsvdx.f",
    "SRC/dgbbrd.f",
    "SRC/dgbcon.f",
    "SRC/dgbequ.f",
    "SRC/dgbrfs.f",
    "SRC/dgbsv.f",
    "SRC/dgbsvx.f",
    "SRC/dgbtf2.f",
    "SRC/dgbtrf.f",
    "SRC/dgbtrs.f",
    "SRC/dgebak.f",
    "SRC/dgebal.f",
    "SRC/dgebd2.f",
    "SRC/dgebrd.f",
    "SRC/dgecon.f",
    "SRC/dgeequ.f",
    "SRC/dgees.f",
    "SRC/dgeesx.f",
    "SRC/dgeev.f",
    "SRC/dgeevx.f",
    "SRC/dgehd2.f",
    "SRC/dgehrd.f",
    "SRC/dgelq2.f",
    "SRC/dgelqf.f",
    "SRC/dgels.f",
    "SRC/dgelsd.f",
    "SRC/dgelss.f",
    "SRC/dgelsy.f",
    "SRC/dgeql2.f",
    "SRC/dgeqlf.f",
    "SRC/dgeqp3.f",
    "SRC/dgeqr2.f",
    "SRC/dgeqr2p.f",
    "SRC/dgeqrf.f",
    "SRC/dgeqrfp.f",
    "SRC/dgerfs.f",
    "SRC/dgerq2.f",
    "SRC/dgerqf.f",
    "SRC/dgesc2.f",
    "SRC/dgesdd.f",
    "SRC/dgesv.f",
    "SRC/dgesvd.f",
    "SRC/dgesvdx.f",
    "SRC/dgesvx.f",
    "SRC/dgetc2.f",
    "SRC/dgetf2.f",
    "SRC/dgetrf.f",
    "SRC/dgetrf2.f",
    "SRC/dgetri.f",
    "SRC/dgetrs.f",
    "SRC/dggbak.f",
    "SRC/dggbal.f",
    "SRC/dgges.f",
    "SRC/dgges3.f",
    "SRC/dggesx.f",
    "SRC/dggev.f",
    "SRC/dggev3.f",
    "SRC/dggevx.f",
    "SRC/dggglm.f",
    "SRC/dgghrd.f",
    "SRC/dgghd3.f",
    "SRC/dgglse.f",
    "SRC/dggqrf.f",
    "SRC/dggrqf.f",
    "SRC/dggsvd3.f",
    "SRC/dggsvp3.f",
    "SRC/dgtcon.f",
    "SRC/dgtrfs.f",
    "SRC/dgtsv.f",
    "SRC/dgtsvx.f",
    "SRC/dgttrf.f",
    "SRC/dgttrs.f",
    "SRC/dgtts2.f",
    "SRC/dhgeqz.f",
    "SRC/dhsein.f",
    "SRC/dhseqr.f",
    "SRC/dlabrd.f",
    "SRC/dlacon.f",
    "SRC/dlacn2.f",
    "SRC/dlaein.f",
    "SRC/dlaexc.f",
    "SRC/dlag2.f",
    "SRC/dlags2.f",
    "SRC/dlagtm.f",
    "SRC/dlagv2.f",
    "SRC/dlahqr.f",
    "SRC/dlahr2.f",
    "SRC/dlaic1.f",
    "SRC/dlaln2.f",
    "SRC/dlals0.f",
    "SRC/dlalsa.f",
    "SRC/dlalsd.f",
    "SRC/dlangb.f",
    "SRC/dlange.f",
    "SRC/dlangt.f",
    "SRC/dlanhs.f",
    "SRC/dlansb.f",
    "SRC/dlansp.f",
    "SRC/dlansy.f",
    "SRC/dlantb.f",
    "SRC/dlantp.f",
    "SRC/dlantr.f",
    "SRC/dlanv2.f",
    "SRC/dlapll.f",
    "SRC/dlapmt.f",
    "SRC/dlaqgb.f",
    "SRC/dlaqge.f",
    "SRC/dlaqp2.f",
    "SRC/dlaqps.f",
    "SRC/dlaqsb.f",
    "SRC/dlaqsp.f",
    "SRC/dlaqsy.f",
    "SRC/dlaqr0.f",
    "SRC/dlaqr1.f",
    "SRC/dlaqr2.f",
    "SRC/dlaqr3.f",
    "SRC/dlaqr4.f",
    "SRC/dlaqr5.f",
    "SRC/dlaqtr.f",
    "SRC/dlar1v.f",
    "SRC/dlar2v.f",
    "SRC/iladlr.f",
    "SRC/iladlc.f",
    "SRC/dlarf.f",
    "SRC/dlarfb.f",
    "SRC/dlarfg.f",
    "SRC/dlarfgp.f",
    "SRC/dlarft.f",
    "SRC/dlarfx.f",
    "SRC/dlarfy.f",
    "SRC/dlargv.f",
    "SRC/dlarrv.f",
    "SRC/dlartv.f",
    "SRC/dlarz.f",
    "SRC/dlarzb.f",
    "SRC/dlarzt.f",
    "SRC/dlaswp.f",
    "SRC/dlasy2.f",
    "SRC/dlasyf.f",
    "SRC/dlasyf_rook.f",
    "SRC/dlasyf_rk.f",
    "SRC/dlasyf_aa.f",
    "SRC/dlatbs.f",
    "SRC/dlatdf.f",
    "SRC/dlatps.f",
    "SRC/dlatrd.f",
    "SRC/dlatrs.f",
    "SRC/dlatrz.f",
    "SRC/dlauu2.f",
    "SRC/dlauum.f",
    "SRC/dopgtr.f",
    "SRC/dopmtr.f",
    "SRC/dorg2l.f",
    "SRC/dorg2r.f",
    "SRC/dorgbr.f",
    "SRC/dorghr.f",
    "SRC/dorgl2.f",
    "SRC/dorglq.f",
    "SRC/dorgql.f",
    "SRC/dorgqr.f",
    "SRC/dorgr2.f",
    "SRC/dorgrq.f",
    "SRC/dorgtr.f",
    "SRC/dorgtsqr.f",
    "SRC/dorm2l.f",
    "SRC/dorm2r.f",
    "SRC/dorm22.f",
    "SRC/dormbr.f",
    "SRC/dormhr.f",
    "SRC/dorml2.f",
    "SRC/dormlq.f",
    "SRC/dormql.f",
    "SRC/dormqr.f",
    "SRC/dormr2.f",
    "SRC/dormr3.f",
    "SRC/dormrq.f",
    "SRC/dormrz.f",
    "SRC/dormtr.f",
    "SRC/dpbcon.f",
    "SRC/dpbequ.f",
    "SRC/dpbrfs.f",
    "SRC/dpbstf.f",
    "SRC/dpbsv.f",
    "SRC/dpbsvx.f",
    "SRC/dpbtf2.f",
    "SRC/dpbtrf.f",
    "SRC/dpbtrs.f",
    "SRC/dpocon.f",
    "SRC/dpoequ.f",
    "SRC/dporfs.f",
    "SRC/dposv.f",
    "SRC/dposvx.f",
    "SRC/dpotf2.f",
    "SRC/dpotrf.f",
    "SRC/dpotrf2.f",
    "SRC/dpotri.f",
    "SRC/dpotrs.f",
    "SRC/dpstrf.f",
    "SRC/dpstf2.f",
    "SRC/dppcon.f",
    "SRC/dppequ.f",
    "SRC/dpprfs.f",
    "SRC/dppsv.f",
    "SRC/dppsvx.f",
    "SRC/dpptrf.f",
    "SRC/dpptri.f",
    "SRC/dpptrs.f",
    "SRC/dptcon.f",
    "SRC/dpteqr.f",
    "SRC/dptrfs.f",
    "SRC/dptsv.f",
    "SRC/dptsvx.f",
    "SRC/dpttrs.f",
    "SRC/dptts2.f",
    "SRC/drscl.f",
    "SRC/dsbev.f",
    "SRC/dsbevd.f",
    "SRC/dsbevx.f",
    "SRC/dsbgst.f",
    "SRC/dsbgv.f",
    "SRC/dsbgvd.f",
    "SRC/dsbgvx.f",
    "SRC/dsbtrd.f",
    "SRC/dspcon.f",
    "SRC/dspev.f",
    "SRC/dspevd.f",
    "SRC/dspevx.f",
    "SRC/dspgst.f",
    "SRC/dspgv.f",
    "SRC/dspgvd.f",
    "SRC/dspgvx.f",
    "SRC/dsprfs.f",
    "SRC/dspsv.f",
    "SRC/dspsvx.f",
    "SRC/dsptrd.f",
    "SRC/dsptrf.f",
    "SRC/dsptri.f",
    "SRC/dsptrs.f",
    "SRC/dstegr.f",
    "SRC/dstein.f",
    "SRC/dstev.f",
    "SRC/dstevd.f",
    "SRC/dstevr.f",
    "SRC/dstevx.f",
    "SRC/dsycon.f",
    "SRC/dsyev.f",
    "SRC/dsyevd.f",
    "SRC/dsyevr.f",
    "SRC/dsyevx.f",
    "SRC/dsygs2.f",
    "SRC/dsygst.f",
    "SRC/dsygv.f",
    "SRC/dsygvd.f",
    "SRC/dsygvx.f",
    "SRC/dsyrfs.f",
    "SRC/dsysv.f",
    "SRC/dsysvx.f",
    "SRC/dsytd2.f",
    "SRC/dsytf2.f",
    "SRC/dsytrd.f",
    "SRC/dsytrf.f",
    "SRC/dsytri.f",
    "SRC/dsytrs.f",
    "SRC/dsytrs2.f",
    "SRC/dsytri2.f",
    "SRC/dsytri2x.f",
    "SRC/dsyswapr.f",
    "SRC/dsyconv.f",
    "SRC/dsyconvf.f",
    "SRC/dsyconvf_rook.f",
    "SRC/dsytf2_rook.f",
    "SRC/dsytrf_rook.f",
    "SRC/dsytrs_rook.f",
    "SRC/dsytri_rook.f",
    "SRC/dsycon_rook.f",
    "SRC/dsysv_rook.f",
    "SRC/dsytf2_rk.f",
    "SRC/dsytrf_rk.f",
    "SRC/dsytrs_3.f",
    "SRC/dsytri_3.f",
    "SRC/dsytri_3x.f",
    "SRC/dsycon_3.f",
    "SRC/dsysv_rk.f",
    "SRC/dsysv_aa.f",
    "SRC/dsytrf_aa.f",
    "SRC/dsytrs_aa.f",
    "SRC/dsysv_aa_2stage.f",
    "SRC/dsytrf_aa_2stage.f",
    "SRC/dsytrs_aa_2stage.f",
    "SRC/dtbcon.f",
    "SRC/dtbrfs.f",
    "SRC/dtbtrs.f",
    "SRC/dtgevc.f",
    "SRC/dtgex2.f",
    "SRC/dtgexc.f",
    "SRC/dtgsen.f",
    "SRC/dtgsja.f",
    "SRC/dtgsna.f",
    "SRC/dtgsy2.f",
    "SRC/dtgsyl.f",
    "SRC/dtpcon.f",
    "SRC/dtprfs.f",
    "SRC/dtptri.f",
    "SRC/dtptrs.f",
    "SRC/dtrcon.f",
    "SRC/dtrevc.f",
    "SRC/dtrevc3.f",
    "SRC/dtrexc.f",
    "SRC/dtrrfs.f",
    "SRC/dtrsen.f",
    "SRC/dtrsna.f",
    "SRC/dtrsyl.f",
    "SRC/dtrti2.f",
    "SRC/dtrtri.f",
    "SRC/dtrtrs.f",
    "SRC/dtzrzf.f",
    "SRC/dstemr.f",
    "SRC/dsgesv.f",
    "SRC/dsposv.f",
    "SRC/dlag2s.f",
    "SRC/slag2d.f",
    "SRC/dlat2s.f",
    "SRC/dlansf.f",
    "SRC/dpftrf.f",
    "SRC/dpftri.f",
    "SRC/dpftrs.f",
    "SRC/dsfrk.f",
    "SRC/dtfsm.f",
    "SRC/dtftri.f",
    "SRC/dtfttp.f",
    "SRC/dtfttr.f",
    "SRC/dtpttf.f",
    "SRC/dtpttr.f",
    "SRC/dtrttf.f",
    "SRC/dtrttp.f",
    "SRC/dgejsv.f",
    "SRC/dgesvj.f",
    "SRC/dgsvj0.f",
    "SRC/dgsvj1.f",
    "SRC/dgeequb.f",
    "SRC/dsyequb.f",
    "SRC/dpoequb.f",
    "SRC/dgbequb.f",
    "SRC/dbbcsd.f",
    "SRC/dlapmr.f",
    "SRC/dorbdb.f",
    "SRC/dorbdb1.f",
    "SRC/dorbdb2.f",
    "SRC/dorbdb3.f",
    "SRC/dorbdb4.f",
    "SRC/dorbdb5.f",
    "SRC/dorbdb6.f",
    "SRC/dorcsd.f",
    "SRC/dorcsd2by1.f",
    "SRC/dgeqrt.f",
    "SRC/dgeqrt2.f",
    "SRC/dgeqrt3.f",
    "SRC/dgemqrt.f",
    "SRC/dtpqrt.f",
    "SRC/dtpqrt2.f",
    "SRC/dtpmqrt.f",
    "SRC/dtprfb.f",
    "SRC/dgelqt.f",
    "SRC/dgelqt3.f",
    "SRC/dgemlqt.f",
    "SRC/dgetsls.f",
    "SRC/dgeqr.f",
    "SRC/dlatsqr.f",
    "SRC/dlamtsqr.f",
    "SRC/dgemqr.f",
    "SRC/dgelq.f",
    "SRC/dlaswlq.f",
    "SRC/dlamswlq.f",
    "SRC/dgemlq.f",
    "SRC/dtplqt.f",
    "SRC/dtplqt2.f",
    "SRC/dtpmlqt.f",
    "SRC/dorhr_col.f",
    "SRC/dlaorhr_col_getrfnp.f",
    "SRC/dlaorhr_col_getrfnp2.f",
    "SRC/dsytrd_2stage.f",
    "SRC/dsytrd_sy2sb.f",
    "SRC/dsytrd_sb2st.F",
    "SRC/dsb2st_kernels.f",
    "SRC/dsyevd_2stage.f",
    "SRC/dsyev_2stage.f",
    "SRC/dsyevx_2stage.f",
    "SRC/dsyevr_2stage.f",
    "SRC/dsbev_2stage.f",
    "SRC/dsbevx_2stage.f",
    "SRC/dsbevd_2stage.f",
    "SRC/dsygv_2stage.f",
    "SRC/dgesvdq.f",
    "SRC/dcombssq.f",
]

DXLASRC = [
    "SRC/dgesvxx.f",
    "SRC/dgerfsx.f",
    "SRC/dla_gerfsx_extended.f",
    "SRC/dla_geamv.f",
    "SRC/dla_gercond.f",
    "SRC/dla_gerpvgrw.f",
    "SRC/dsysvxx.f",
    "SRC/dsyrfsx.f",
    "SRC/dla_syrfsx_extended.f",
    "SRC/dla_syamv.f",
    "SRC/dla_syrcond.f",
    "SRC/dla_syrpvgrw.f",
    "SRC/dposvxx.f",
    "SRC/dporfsx.f",
    "SRC/dla_porfsx_extended.f",
    "SRC/dla_porcond.f",
    "SRC/dla_porpvgrw.f",
    "SRC/dgbsvxx.f",
    "SRC/dgbrfsx.f",
    "SRC/dla_gbrfsx_extended.f",
    "SRC/dla_gbamv.f",
    "SRC/dla_gbrcond.f",
    "SRC/dla_gbrpvgrw.f",
    "SRC/dla_lin_berr.f",
    "SRC/dlarscl2.f",
    "SRC/dlascl2.f",
    "SRC/dla_wwaddw.f",
]

ZLASRC = [
    "SRC/zbdsqr.f",
    "SRC/zgbbrd.f",
    "SRC/zgbcon.f",
    "SRC/zgbequ.f",
    "SRC/zgbrfs.f",
    "SRC/zgbsv.f",
    "SRC/zgbsvx.f",
    "SRC/zgbtf2.f",
    "SRC/zgbtrf.f",
    "SRC/zgbtrs.f",
    "SRC/zgebak.f",
    "SRC/zgebal.f",
    "SRC/zgebd2.f",
    "SRC/zgebrd.f",
    "SRC/zgecon.f",
    "SRC/zgeequ.f",
    "SRC/zgees.f",
    "SRC/zgeesx.f",
    "SRC/zgeev.f",
    "SRC/zgeevx.f",
    "SRC/zgehd2.f",
    "SRC/zgehrd.f",
    "SRC/zgelq2.f",
    "SRC/zgelqf.f",
    "SRC/zgels.f",
    "SRC/zgelsd.f",
    "SRC/zgelss.f",
    "SRC/zgelsy.f",
    "SRC/zgeql2.f",
    "SRC/zgeqlf.f",
    "SRC/zgeqp3.f",
    "SRC/zgeqr2.f",
    "SRC/zgeqr2p.f",
    "SRC/zgeqrf.f",
    "SRC/zgeqrfp.f",
    "SRC/zgerfs.f",
    "SRC/zgerq2.f",
    "SRC/zgerqf.f",
    "SRC/zgesc2.f",
    "SRC/zgesdd.f",
    "SRC/zgesv.f",
    "SRC/zgesvd.f",
    "SRC/zgesvdx.f",
    "SRC/zgesvx.f",
    "SRC/zgesvj.f",
    "SRC/zgejsv.f",
    "SRC/zgsvj0.f",
    "SRC/zgsvj1.f",
    "SRC/zgetc2.f",
    "SRC/zgetf2.f",
    "SRC/zgetrf.f",
    "SRC/zgetrf2.f",
    "SRC/zgetri.f",
    "SRC/zgetrs.f",
    "SRC/zggbak.f",
    "SRC/zggbal.f",
    "SRC/zgges.f",
    "SRC/zgges3.f",
    "SRC/zggesx.f",
    "SRC/zggev.f",
    "SRC/zggev3.f",
    "SRC/zggevx.f",
    "SRC/zggglm.f",
    "SRC/zgghrd.f",
    "SRC/zgghd3.f",
    "SRC/zgglse.f",
    "SRC/zggqrf.f",
    "SRC/zggrqf.f",
    "SRC/zggsvd3.f",
    "SRC/zggsvp3.f",
    "SRC/zgtcon.f",
    "SRC/zgtrfs.f",
    "SRC/zgtsv.f",
    "SRC/zgtsvx.f",
    "SRC/zgttrf.f",
    "SRC/zgttrs.f",
    "SRC/zgtts2.f",
    "SRC/zhbev.f",
    "SRC/zhbevd.f",
    "SRC/zhbevx.f",
    "SRC/zhbgst.f",
    "SRC/zhbgv.f",
    "SRC/zhbgvd.f",
    "SRC/zhbgvx.f",
    "SRC/zhbtrd.f",
    "SRC/zhecon.f",
    "SRC/zheev.f",
    "SRC/zheevd.f",
    "SRC/zheevr.f",
    "SRC/zheevx.f",
    "SRC/zhegs2.f",
    "SRC/zhegst.f",
    "SRC/zhegv.f",
    "SRC/zhegvd.f",
    "SRC/zhegvx.f",
    "SRC/zherfs.f",
    "SRC/zhesv.f",
    "SRC/zhesvx.f",
    "SRC/zhetd2.f",
    "SRC/zhetf2.f",
    "SRC/zhetrd.f",
    "SRC/zhetrf.f",
    "SRC/zhetri.f",
    "SRC/zhetri2.f",
    "SRC/zhetri2x.f",
    "SRC/zheswapr.f",
    "SRC/zhetrs.f",
    "SRC/zhetrs2.f",
    "SRC/zhetf2_rook.f",
    "SRC/zhetrf_rook.f",
    "SRC/zhetri_rook.f",
    "SRC/zhetrs_rook.f",
    "SRC/zhecon_rook.f",
    "SRC/zhesv_rook.f",
    "SRC/zhetf2_rk.f",
    "SRC/zhetrf_rk.f",
    "SRC/zhetri_3.f",
    "SRC/zhetri_3x.f",
    "SRC/zhetrs_3.f",
    "SRC/zhecon_3.f",
    "SRC/zhesv_rk.f",
    "SRC/zhesv_aa.f",
    "SRC/zhetrf_aa.f",
    "SRC/zhetrs_aa.f",
    "SRC/zhesv_aa_2stage.f",
    "SRC/zhetrf_aa_2stage.f",
    "SRC/zhetrs_aa_2stage.f",
    "SRC/zhgeqz.f",
    "SRC/zhpcon.f",
    "SRC/zhpev.f",
    "SRC/zhpevd.f",
    "SRC/zhpevx.f",
    "SRC/zhpgst.f",
    "SRC/zhpgv.f",
    "SRC/zhpgvd.f",
    "SRC/zhpgvx.f",
    "SRC/zhprfs.f",
    "SRC/zhpsv.f",
    "SRC/zhpsvx.f",
    "SRC/zhptrd.f",
    "SRC/zhptrf.f",
    "SRC/zhptri.f",
    "SRC/zhptrs.f",
    "SRC/zhsein.f",
    "SRC/zhseqr.f",
    "SRC/zlabrd.f",
    "SRC/zlacgv.f",
    "SRC/zlacon.f",
    "SRC/zlacn2.f",
    "SRC/zlacp2.f",
    "SRC/zlacpy.f",
    "SRC/zlacrm.f",
    "SRC/zlacrt.f",
    "SRC/zladiv.f",
    "SRC/zlaed0.f",
    "SRC/zlaed7.f",
    "SRC/zlaed8.f",
    "SRC/zlaein.f",
    "SRC/zlaesy.f",
    "SRC/zlaev2.f",
    "SRC/zlags2.f",
    "SRC/zlagtm.f",
    "SRC/zlahef.f",
    "SRC/zlahef_rook.f",
    "SRC/zlahef_rk.f",
    "SRC/zlahef_aa.f",
    "SRC/zlahqr.f",
    "SRC/zlahr2.f",
    "SRC/zlaic1.f",
    "SRC/zlals0.f",
    "SRC/zlalsa.f",
    "SRC/zlalsd.f",
    "SRC/zlangb.f",
    "SRC/zlange.f",
    "SRC/zlangt.f",
    "SRC/zlanhb.f",
    "SRC/zlanhe.f",
    "SRC/zlanhp.f",
    "SRC/zlanhs.f",
    "SRC/zlanht.f",
    "SRC/zlansb.f",
    "SRC/zlansp.f",
    "SRC/zlansy.f",
    "SRC/zlantb.f",
    "SRC/zlantp.f",
    "SRC/zlantr.f",
    "SRC/zlapll.f",
    "SRC/zlapmt.f",
    "SRC/zlaqgb.f",
    "SRC/zlaqge.f",
    "SRC/zlaqhb.f",
    "SRC/zlaqhe.f",
    "SRC/zlaqhp.f",
    "SRC/zlaqp2.f",
    "SRC/zlaqps.f",
    "SRC/zlaqsb.f",
    "SRC/zlaqr0.f",
    "SRC/zlaqr1.f",
    "SRC/zlaqr2.f",
    "SRC/zlaqr3.f",
    "SRC/zlaqr4.f",
    "SRC/zlaqr5.f",
    "SRC/zlaqsp.f",
    "SRC/zlaqsy.f",
    "SRC/zlar1v.f",
    "SRC/zlar2v.f",
    "SRC/ilazlr.f",
    "SRC/ilazlc.f",
    "SRC/zlarcm.f",
    "SRC/zlarf.f",
    "SRC/zlarfb.f",
    "SRC/zlarfg.f",
    "SRC/zlarfgp.f",
    "SRC/zlarft.f",
    "SRC/zlarfx.f",
    "SRC/zlarfy.f",
    "SRC/zlargv.f",
    "SRC/zlarnv.f",
    "SRC/zlarrv.f",
    "SRC/zlartg.f",
    "SRC/zlartv.f",
    "SRC/zlarz.f",
    "SRC/zlarzb.f",
    "SRC/zlarzt.f",
    "SRC/zlascl.f",
    "SRC/zlaset.f",
    "SRC/zlasr.f",
    "SRC/zlassq.f",
    "SRC/zlaswp.f",
    "SRC/zlasyf.f",
    "SRC/zlasyf_rook.f",
    "SRC/zlasyf_rk.f",
    "SRC/zlasyf_aa.f",
    "SRC/zlatbs.f",
    "SRC/zlatdf.f",
    "SRC/zlatps.f",
    "SRC/zlatrd.f",
    "SRC/zlatrs.f",
    "SRC/zlatrz.f",
    "SRC/zlauu2.f",
    "SRC/zlauum.f",
    "SRC/zpbcon.f",
    "SRC/zpbequ.f",
    "SRC/zpbrfs.f",
    "SRC/zpbstf.f",
    "SRC/zpbsv.f",
    "SRC/zpbsvx.f",
    "SRC/zpbtf2.f",
    "SRC/zpbtrf.f",
    "SRC/zpbtrs.f",
    "SRC/zpocon.f",
    "SRC/zpoequ.f",
    "SRC/zporfs.f",
    "SRC/zposv.f",
    "SRC/zposvx.f",
    "SRC/zpotf2.f",
    "SRC/zpotrf.f",
    "SRC/zpotrf2.f",
    "SRC/zpotri.f",
    "SRC/zpotrs.f",
    "SRC/zpstrf.f",
    "SRC/zpstf2.f",
    "SRC/zppcon.f",
    "SRC/zppequ.f",
    "SRC/zpprfs.f",
    "SRC/zppsv.f",
    "SRC/zppsvx.f",
    "SRC/zpptrf.f",
    "SRC/zpptri.f",
    "SRC/zpptrs.f",
    "SRC/zptcon.f",
    "SRC/zpteqr.f",
    "SRC/zptrfs.f",
    "SRC/zptsv.f",
    "SRC/zptsvx.f",
    "SRC/zpttrf.f",
    "SRC/zpttrs.f",
    "SRC/zptts2.f",
    "SRC/zrot.f",
    "SRC/zspcon.f",
    "SRC/zspmv.f",
    "SRC/zspr.f",
    "SRC/zsprfs.f",
    "SRC/zspsv.f",
    "SRC/zspsvx.f",
    "SRC/zsptrf.f",
    "SRC/zsptri.f",
    "SRC/zsptrs.f",
    "SRC/zdrscl.f",
    "SRC/zstedc.f",
    "SRC/zstegr.f",
    "SRC/zstein.f",
    "SRC/zsteqr.f",
    "SRC/zsycon.f",
    "SRC/zsymv.f",
    "SRC/zsyr.f",
    "SRC/zsyrfs.f",
    "SRC/zsysv.f",
    "SRC/zsysvx.f",
    "SRC/zsytf2.f",
    "SRC/zsytrf.f",
    "SRC/zsytri.f",
    "SRC/zsytri2.f",
    "SRC/zsytri2x.f",
    "SRC/zsyswapr.f",
    "SRC/zsytrs.f",
    "SRC/zsytrs2.f",
    "SRC/zsyconv.f",
    "SRC/zsyconvf.f",
    "SRC/zsyconvf_rook.f",
    "SRC/zsytf2_rook.f",
    "SRC/zsytrf_rook.f",
    "SRC/zsytrs_rook.f",
    "SRC/zsytrs_aa.f",
    "SRC/zsytri_rook.f",
    "SRC/zsycon_rook.f",
    "SRC/zsysv_rook.f",
    "SRC/zsytf2_rk.f",
    "SRC/zsytrf_rk.f",
    "SRC/zsytrf_aa.f",
    "SRC/zsytrs_3.f",
    "SRC/zsysv_aa_2stage.f",
    "SRC/zsytrf_aa_2stage.f",
    "SRC/zsytrs_aa_2stage.f",
    "SRC/zsytri_3.f",
    "SRC/zsytri_3x.f",
    "SRC/zsycon_3.f",
    "SRC/zsysv_rk.f",
    "SRC/zsysv_aa.f",
    "SRC/ztbcon.f",
    "SRC/ztbrfs.f",
    "SRC/ztbtrs.f",
    "SRC/ztgevc.f",
    "SRC/ztgex2.f",
    "SRC/ztgexc.f",
    "SRC/ztgsen.f",
    "SRC/ztgsja.f",
    "SRC/ztgsna.f",
    "SRC/ztgsy2.f",
    "SRC/ztgsyl.f",
    "SRC/ztpcon.f",
    "SRC/ztprfs.f",
    "SRC/ztptri.f",
    "SRC/ztptrs.f",
    "SRC/ztrcon.f",
    "SRC/ztrevc.f",
    "SRC/ztrevc3.f",
    "SRC/ztrexc.f",
    "SRC/ztrrfs.f",
    "SRC/ztrsen.f",
    "SRC/ztrsna.f",
    "SRC/ztrsyl.f",
    "SRC/ztrti2.f",
    "SRC/ztrtri.f",
    "SRC/ztrtrs.f",
    "SRC/ztzrzf.f",
    "SRC/zung2l.f",
    "SRC/zung2r.f",
    "SRC/zungbr.f",
    "SRC/zunghr.f",
    "SRC/zungl2.f",
    "SRC/zunglq.f",
    "SRC/zungql.f",
    "SRC/zungqr.f",
    "SRC/zungr2.f",
    "SRC/zungrq.f",
    "SRC/zungtr.f",
    "SRC/zungtsqr.f",
    "SRC/zunm2l.f",
    "SRC/zunm2r.f",
    "SRC/zunmbr.f",
    "SRC/zunmhr.f",
    "SRC/zunml2.f",
    "SRC/zunm22.f",
    "SRC/zunmlq.f",
    "SRC/zunmql.f",
    "SRC/zunmqr.f",
    "SRC/zunmr2.f",
    "SRC/zunmr3.f",
    "SRC/zunmrq.f",
    "SRC/zunmrz.f",
    "SRC/zunmtr.f",
    "SRC/zupgtr.f",
    "SRC/zupmtr.f",
    "SRC/izmax1.f",
    "SRC/dzsum1.f",
    "SRC/zstemr.f",
    "SRC/zcgesv.f",
    "SRC/zcposv.f",
    "SRC/zlag2c.f",
    "SRC/clag2z.f",
    "SRC/zlat2c.f",
    "SRC/zhfrk.f",
    "SRC/ztfttp.f",
    "SRC/zlanhf.f",
    "SRC/zpftrf.f",
    "SRC/zpftri.f",
    "SRC/zpftrs.f",
    "SRC/ztfsm.f",
    "SRC/ztftri.f",
    "SRC/ztfttr.f",
    "SRC/ztpttf.f",
    "SRC/ztpttr.f",
    "SRC/ztrttf.f",
    "SRC/ztrttp.f",
    "SRC/zgeequb.f",
    "SRC/zgbequb.f",
    "SRC/zsyequb.f",
    "SRC/zpoequb.f",
    "SRC/zheequb.f",
    "SRC/zbbcsd.f",
    "SRC/zlapmr.f",
    "SRC/zunbdb.f",
    "SRC/zunbdb1.f",
    "SRC/zunbdb2.f",
    "SRC/zunbdb3.f",
    "SRC/zunbdb4.f",
    "SRC/zunbdb5.f",
    "SRC/zunbdb6.f",
    "SRC/zuncsd.f",
    "SRC/zuncsd2by1.f",
    "SRC/zgeqrt.f",
    "SRC/zgeqrt2.f",
    "SRC/zgeqrt3.f",
    "SRC/zgemqrt.f",
    "SRC/ztpqrt.f",
    "SRC/ztpqrt2.f",
    "SRC/ztpmqrt.f",
    "SRC/ztprfb.f",
    "SRC/ztplqt.f",
    "SRC/ztplqt2.f",
    "SRC/ztpmlqt.f",
    "SRC/zgelqt.f",
    "SRC/zgelqt3.f",
    "SRC/zgemlqt.f",
    "SRC/zgetsls.f",
    "SRC/zgeqr.f",
    "SRC/zlatsqr.f",
    "SRC/zlamtsqr.f",
    "SRC/zgemqr.f",
    "SRC/zgelq.f",
    "SRC/zlaswlq.f",
    "SRC/zlamswlq.f",
    "SRC/zgemlq.f",
    "SRC/zunhr_col.f",
    "SRC/zlaunhr_col_getrfnp.f",
    "SRC/zlaunhr_col_getrfnp2.f",
    "SRC/zhetrd_2stage.f",
    "SRC/zhetrd_he2hb.f",
    "SRC/zhetrd_hb2st.F",
    "SRC/zhb2st_kernels.f",
    "SRC/zheevd_2stage.f",
    "SRC/zheev_2stage.f",
    "SRC/zheevx_2stage.f",
    "SRC/zheevr_2stage.f",
    "SRC/zhbev_2stage.f",
    "SRC/zhbevx_2stage.f",
    "SRC/zhbevd_2stage.f",
    "SRC/zhegv_2stage.f",
    "SRC/zgesvdq.f",
]

ZXLASRC = [
    "SRC/zgesvxx.f",
    "SRC/zgerfsx.f",
    "SRC/zla_gerfsx_extended.f",
    "SRC/zla_geamv.f",
    "SRC/zla_gercond_c.f",
    "SRC/zla_gercond_x.f",
    "SRC/zla_gerpvgrw.f",
    "SRC/zsysvxx.f",
    "SRC/zsyrfsx.f",
    "SRC/zla_syrfsx_extended.f",
    "SRC/zla_syamv.f",
    "SRC/zla_syrcond_c.f",
    "SRC/zla_syrcond_x.f",
    "SRC/zla_syrpvgrw.f",
    "SRC/zposvxx.f",
    "SRC/zporfsx.f",
    "SRC/zla_porfsx_extended.f",
    "SRC/zla_porcond_c.f",
    "SRC/zla_porcond_x.f",
    "SRC/zla_porpvgrw.f",
    "SRC/zgbsvxx.f",
    "SRC/zgbrfsx.f",
    "SRC/zla_gbrfsx_extended.f",
    "SRC/zla_gbamv.f",
    "SRC/zla_gbrcond_c.f",
    "SRC/zla_gbrcond_x.f",
    "SRC/zla_gbrpvgrw.f",
    "SRC/zhesvxx.f",
    "SRC/zherfsx.f",
    "SRC/zla_herfsx_extended.f",
    "SRC/zla_heamv.f",
    "SRC/zla_hercond_c.f",
    "SRC/zla_hercond_x.f",
    "SRC/zla_herpvgrw.f",
    "SRC/zla_lin_berr.f",
    "SRC/zlarscl2.f",
    "SRC/zlascl2.f",
    "SRC/zla_wwaddw.f",
]


DEPRECATED_SLASRC = [
    "SRC/DEPRECATED/sgegs.f",
    "SRC/DEPRECATED/sgegv.f",
    "SRC/DEPRECATED/sgeqpf.f",
    "SRC/DEPRECATED/sgelsx.f",
    "SRC/DEPRECATED/sggsvd.f",
    "SRC/DEPRECATED/sggsvp.f",
    "SRC/DEPRECATED/slahrd.f",
    "SRC/DEPRECATED/slatzm.f",
    "SRC/DEPRECATED/stzrqf.f",
]

DEPRECATED_DLASRC = [
    "SRC/DEPRECATED/dgegs.f",
    "SRC/DEPRECATED/dgegv.f",
    "SRC/DEPRECATED/dgeqpf.f",
    "SRC/DEPRECATED/dgelsx.f",
    "SRC/DEPRECATED/dggsvd.f",
    "SRC/DEPRECATED/dggsvp.f",
    "SRC/DEPRECATED/dlahrd.f",
    "SRC/DEPRECATED/dlatzm.f",
    "SRC/DEPRECATED/dtzrqf.f",
]

DEPRECATED_CLASRC = [
    "SRC/DEPRECATED/cgegs.f",
    "SRC/DEPRECATED/cgegv.f",
    "SRC/DEPRECATED/cgeqpf.f",
    "SRC/DEPRECATED/cgelsx.f",
    "SRC/DEPRECATED/cggsvd.f",
    "SRC/DEPRECATED/cggsvp.f",
    "SRC/DEPRECATED/clahrd.f",
    "SRC/DEPRECATED/clatzm.f",
    "SRC/DEPRECATED/ctzrqf.f",
]

DEPRECATED_ZLASRC = [
    "SRC/DEPRECATED/zgegs.f",
    "SRC/DEPRECATED/zgegv.f",
    "SRC/DEPRECATED/zgeqpf.f",
    "SRC/DEPRECATED/zgelsx.f",
    "SRC/DEPRECATED/zggsvd.f",
    "SRC/DEPRECATED/zggsvp.f",
    "SRC/DEPRECATED/zlahrd.f",
    "SRC/DEPRECATED/zlatzm.f",
    "SRC/DEPRECATED/ztzrqf.f",
]

SINGLE_SOURCES = SLASRC + DSLASRC + SCLAUX + ALLAUX
DOUBLE_SOURCES = DLASRC + DSLASRC + DZLAUX + ALLAUX
COMPLEX_SOURCES = CLASRC + ZCLASRC + SCLAUX + ALLAUX
COMPLEX16_SOURCES = ZLASRC + ZCLASRC + DZLAUX + ALLAUX
DEPRECATED_SOURCES = DEPRECATED_SLASRC + DEPRECATED_DLASRC + DEPRECATED_CLASRC + DEPRECATED_ZLASRC

ALL_SOURCES = depset(SINGLE_SOURCES + DOUBLE_SOURCES + COMPLEX_SOURCES + COMPLEX16_SOURCES + DEPRECATED_SOURCES).to_list()

[genrule(
    name = src.replace("SRC/", "").replace(".f", "").replace(".F", "").replace("/", "_"),
    srcs = [
        "@com_github_flang_compiler_flang//:bin/flang",
        src,
    ],
    outs = [
        src.replace(".f", "").replace(".F", "") + ".o"
    ],
    message = "Compiling " + src,
    # -Kieee is to be sure to use IEEE math despite using a high optimization level.
    cmd = "$(location @com_github_flang_compiler_flang//:bin/flang) -O2 -Kieee -fPIC -DNDEBUG -c $(location " + src + ") -o $@",
) for src in ALL_SOURCES]

cc_library(
    name = "lapack",
    srcs = [src.replace(".f", "").replace(".F", "") + ".o" for src in ALL_SOURCES] + [
        "@com_github_flang_compiler_flang//:lib/libflang.a",
        "@com_github_flang_compiler_flang//:lib/libflangmain.a",
        "@com_github_flang_compiler_flang//:lib/libflangrti.a",
        "@com_github_flang_compiler_flang//:lib/libompstub.a",
        "@com_github_flang_compiler_flang//:lib/libpgmath.a",
    ],
    linkopts = [
        "-lrt",
    ],
    # Don't use this directly, instead use @com_google_open_silicon_bazel//dependency_support/lapack
    visibility = ["@com_google_open_silicon_bazel//dependency_support/lapack:__subpackages__"],
    deps = [
        "@com_google_open_silicon_bazel//dependency_support/lapack:blas",
    ],
)
